--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
+    "dotenv": "^10.0.0",
     "line-reader": "^0.4.0",
+    "mongodb": "^4.2.2",
     "request-promise": "^4.2.6"
   }
 }
